--- a/hibatis/pom.xml
+++ b/hibatis/pom.xml
@@ -62,7 +62,7 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
 			<version>4.3.1.RELEASE</version>
-			<scope>provided</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>ognl</groupId>
